--- a/index.html
+++ b/index.html
@@ -103,13 +103,22 @@
       </section>
 
 
-          <ul class="blog-list" id="blogList" style="margin-top:-150px;">
+          <ul class="blog-list" id="blogList" >
 
 
           </ul>
 
 
-
+<style>
+.blog-list{
+	margin-top:-150px;
+}
+@media (max-width: 767px) {
+.blog-list{
+	margin-top:5px;
+}
+}
+</style>
       <!-- 
         - #CONTACT
       -->
