--- a/index.html
+++ b/index.html
@@ -12,16 +12,11 @@
     <h1>Anxiety and Depression Trends</h1>
     <div id="trends"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         async function fetchData() {
+            const url = 'https://anxiety-depression1.p.rapidapi.com/records';
             const options = {
                 method: 'GET',
-                url: 'https://anxiety-depression1.p.rapidapi.com/records',
-                params: {
-                    orderBy: 'dataListIndex_asc',
-                    limit: '500'
-                },
                 headers: {
                     'X-RapidAPI-Key': '3695cf0905msh990dbdd94caca2dp187eeajsn74d02578c54c',
                     'X-RapidAPI-Host': 'anxiety-depression1.p.rapidapi.com'
@@ -29,8 +24,11 @@
             };
 
             try {
-                const response = await axios.request(options);
-                return response.data;
+                const response = await fetch(url, options);
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return await response.json();
             } catch (error) {
                 console.error('Error fetching data:', error);
                 return [];
